--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'lato';
+    src: url(./fonts/Lato/Lato-Regular.ttf) format('truetype');
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'lato', Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+}
+
 .svg {
     width: 25px;
 }
@@ -10,10 +23,54 @@
     width: 75px;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+.sidebar {
+    grid-row: 1/-1;
+    background-color: rgba(54, 199, 151, 0.5);
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.search {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    width: 80%;
+}
+
+.search input {
+    flex: 1;
+    border-radius: 2rem;
+    border: none;
+    background-color: rgba(161, 161, 161, 0.26);
+    height: 2rem;
+    padding-left: 1rem;
+    font-size: 1.2rem;
+}
+
+.search input:focus {
+    outline: none;
+}
+
+.body {
+    background-color: rgba(185, 37, 136, 0.5);
+}
+
+
 .announcements .tile {
 
 }
 
 .trending .tile {
-    
+
 }
