--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* global styling */
+
 @font-face {
     font-family: 'lato';
     src: url(./fonts/Lato/Lato-Regular.ttf) format('truetype');
@@ -20,8 +22,25 @@ body {
     width: 25px;
 }
 
-.sidebar .svg {
-    filter: invert(100%);
+.container {
+    display: grid;
+    grid-template-columns: 225px 1fr;
+    grid-template-rows: 200px 1fr;
+}
+
+.sidebar {
+    grid-row: 1/-1;
+}
+
+
+/* header styling */
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr 400px;
+    justify-items: center;
+    align-items: center;
+    box-shadow: 0 10px 10px var(--background-color);
 }
 
 .profile-pic {
@@ -32,25 +51,6 @@ body {
 .profile-pic-large {
     width: 75px;
     border-radius: 50%;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 225px 1fr;
-    grid-template-rows: 200px 1fr;
-}
-
-.sidebar {
-    grid-row: 1/-1;
-    background-color: var(--theme-color);
-}
-
-.header {
-    display: grid;
-    grid-template-columns: 5fr 2fr;
-    justify-items: center;
-    align-items: center;
-    box-shadow: 0 10px 10px var(--background-color);
 }
 
 .search {
@@ -110,7 +110,11 @@ body {
     color: white;
 }
 
+
+/* sidebar styling */
+
 .sidebar {
+    background-color: var(--theme-color);
     display: grid;
     grid-auto-rows: max-content;
     gap: 20px;
@@ -140,19 +144,77 @@ body {
     width: 50px;
 }
 
+.sidebar .svg {
+    filter: invert(100%);
+}
 
 
-
+/* body styling */
 
 .body {
     background-color: var(--background-color);
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 4fr 300px;
+    grid-template-rows: 400px 1fr;
+    align-items: start;
+    gap: 20px;
+}
+
+.body .projects {
+    grid-row: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-rows: auto;
+    grid-auto-rows: 1fr;
+    height: 100%;
+    gap: 20px;
+}
+
+.body .legend {
+    grid-column: 1/-1;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+.projects .card {
+    padding: 10px;
+    border-left: var(--theme-color) 10px solid;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 5px 5px 5px var(--background-color);
+    display: grid;
+
+}
+
+.projects .card .title {
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+.projects .card .options {
+    justify-self: end;
+    margin: 10px;
+    display: flex;
+    gap: 20px;
 }
 
 
-.announcements .tile {
-
+.announcements, .trending {
+    display: grid;
+    grid-template-rows: auto;
+    grid-auto-rows: 1fr;
+    gap: 20px;
 }
 
-.trending .tile {
+/* .announcements .tile, .trending .tile, .announcements, .trending, .body, .container {
+    border: 3px black solid;
+} */
 
+.announcements .tile .title {
+    font-weight: bold;
+}
+
+.announcements .tile .text {
+    font-size: 0.95rem;
 }
