--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 .container {
     display: grid;
     grid-template-columns: 225px 1fr;
-    grid-template-rows: 200px 1fr;
+    grid-template-rows: 175px 1fr;
+	height: 100vh;
 }
 
 .sidebar {
@@ -136,6 +137,7 @@ body {
 }
 
 .sidebar .title {
+	padding-top: 10px;
     font-size: 1.5rem;
     justify-self: center;
 }
@@ -156,8 +158,7 @@ body {
     padding: 20px;
     display: grid;
     grid-template-columns: 4fr 300px;
-    grid-template-rows: 400px 1fr;
-    align-items: start;
+    grid-template-rows: repeat(2,min-content);
     gap: 20px;
 }
 
@@ -167,7 +168,6 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
     grid-template-rows: auto;
     grid-auto-rows: 1fr;
-    height: 100%;
     gap: 20px;
 }
 
@@ -184,7 +184,6 @@ body {
     background-color: white;
     box-shadow: 5px 5px 5px var(--background-color);
     display: grid;
-
 }
 
 .projects .card .title {
@@ -194,27 +193,40 @@ body {
 
 .projects .card .options {
     justify-self: end;
-    margin: 10px;
+    margin: 5px;
     display: flex;
     gap: 20px;
 }
 
-
 .announcements, .trending {
-    display: grid;
-    grid-template-rows: auto;
-    grid-auto-rows: 1fr;
-    gap: 20px;
+	display: grid;
+	gap: 10px;
+	height: min-content;
 }
 
-/* .announcements .tile, .trending .tile, .announcements, .trending, .body, .container {
-    border: 3px black solid;
-} */
-
-.announcements .tile .title {
-    font-weight: bold;
+.tile {
+	background-color: white;
+	padding: 10px;
+	box-shadow: 5px 5px 5px var(--background-color);
+	border-radius: 10px;
+	border-top: 1px var(--background-color) solid;
 }
 
-.announcements .tile .text {
-    font-size: 0.95rem;
+.trending .tile {
+	display: grid;
+	grid-template-columns: min-content 1fr;
+	grid-template-rows: min-content min-content;
+	gap: 5px;
+}
+
+.trending .tile img {
+	grid-row: 1/-1;
+}
+
+.tile .text {
+	font-size: 0.95rem;
+}
+
+.tile .title {
+	font-weight: bold;
 }
