--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ body {
     color: var(--text);
     user-select: none;
 
-    -webkit-transition: background-color 1000ms linear;
-    -ms-transition: background-color 1000ms linear;
-    transition: background-color 1000ms linear;
+    -webkit-transition: background-color 1000ms linear, box-shadow 1000ms linear;
+    -ms-transition: background-color 1000ms linear, box-shadow 1000ms linear;
+    transition: background-color 1000ms linear, box-shadow 1000ms linear;
 }
 
 .profile-pic {
@@ -71,7 +71,7 @@ body {
     border-radius: 50%;
 }
 
-.night-mode.active { /*sets moon icon to white when in dark mode*/
+.night-mode.active { /*sets moon svg to white when in dark mode*/
     stroke: white;
     fill: white;
     color: white;
@@ -229,6 +229,8 @@ body {
 }
 
 .card {
+    text-decoration: none;
+    color: var(--text);
     padding: 10px;
     border-left: var(--theme-color) 10px solid;
     border-radius: 10px;
